Fix invalid overflow CSS value in bds-tab-group - change from 'none' to 'auto'

--- a/src/components/tabs/tab-group.scss
+++ b/src/components/tabs/tab-group.scss
@@ -127,7 +127,7 @@
 
   &__scrolled {
     flex-shrink: 999;
-    overflow: none;
+    overflow: auto;
 
     @include custom-scroll;
   }
